--- a/public/index.html
+++ b/public/index.html
@@ -58,11 +58,55 @@
         .nav-links a {
             color: white;
             text-decoration: none;
-            transition: color 0.3s ease;
+            transition: all 0.3s ease;
+            padding: 8px 16px;
+            border-radius: 25px;
         }
 
         .nav-links a:hover {
             color: #93c5fd;
+        }
+
+        .nav-links a.beta-nav-link {
+            background: linear-gradient(45deg, #ffffff, #f1f5f9);
+            color: #1e40af !important;
+            font-weight: 600;
+            padding: 10px 20px;
+            border-radius: 25px;
+            box-shadow: 0 3px 15px rgba(255, 255, 255, 0.3);
+            animation: pulse-glow 2s infinite;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .nav-links a.beta-nav-link::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.4), transparent);
+            transition: left 0.5s;
+        }
+
+        .nav-links a.beta-nav-link:hover {
+            color: #1e40af !important;
+            transform: translateY(-2px);
+            box-shadow: 0 5px 20px rgba(255, 255, 255, 0.4);
+        }
+
+        .nav-links a.beta-nav-link:hover::before {
+            left: 100%;
+        }
+
+        @keyframes pulse-glow {
+            0%, 100% {
+                box-shadow: 0 3px 15px rgba(255, 255, 255, 0.3);
+            }
+            50% {
+                box-shadow: 0 3px 20px rgba(255, 255, 255, 0.5), 0 0 25px rgba(255, 255, 255, 0.3);
+            }
         }
 
         /* Hero Section */
@@ -401,7 +445,7 @@
                 <li><a href="#features">Features</a></li>
                 <li><a href="#how-it-works">How It Works</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#beta">Join Beta</a></li>
+                <li><a href="#beta" class="beta-nav-link">🚀 Join Beta</a></li>
             </ul>
         </nav>
     </header>
