--- a/public/index.html
+++ b/public/index.html
@@ -68,45 +68,18 @@
         }
 
         .nav-links a.beta-nav-link {
-            background: linear-gradient(45deg, #ffffff, #f1f5f9);
+            background: #ffffff;
             color: #1e40af !important;
-            font-weight: 600;
+            font-weight: 700;
             padding: 10px 20px;
             border-radius: 25px;
-            box-shadow: 0 3px 15px rgba(255, 255, 255, 0.3);
-            animation: pulse-glow 2s infinite;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .nav-links a.beta-nav-link::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: -100%;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.4), transparent);
-            transition: left 0.5s;
+            transition: all 0.3s ease;
         }
 
         .nav-links a.beta-nav-link:hover {
             color: #1e40af !important;
-            transform: translateY(-2px);
-            box-shadow: 0 5px 20px rgba(255, 255, 255, 0.4);
-        }
-
-        .nav-links a.beta-nav-link:hover::before {
-            left: 100%;
-        }
-
-        @keyframes pulse-glow {
-            0%, 100% {
-                box-shadow: 0 3px 15px rgba(255, 255, 255, 0.3);
-            }
-            50% {
-                box-shadow: 0 3px 20px rgba(255, 255, 255, 0.5), 0 0 25px rgba(255, 255, 255, 0.3);
-            }
+            background: #f8fafc;
+            transform: translateY(-1px);
         }
 
         /* Hero Section */
